implement apache httpclient